# UBXProto

./: .gitignore  CMakeLists.txt  LGPLv3.txt  README  portable_endian.h  ubx.c  ubx.h  ubxaid.h  ubxcfg.h  ubxlog.h  ubxmessage.h  ubxmon.h  ubxproto.doxyconf  ubxproto.pro  ubxrxm.h  ubxutils.h
cmake/: CMakeGen.cmake  Config.cmake.in  ConfigVersion.cmake.in
